ТЗ-15, создание классов и базовой логики